--- a/src/CashFlow.Exception/ResourceErrorMessages.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,22 +117,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="UNKNOWN_ERROR" xml:space="preserve">
-    <value>Unknown error</value>
-  </data>
-  <data name="TITLE_REQUIRED" xml:space="preserve">
-    <value>The title must not be empty</value>
-  </data>
   <data name="AMOUNT_MUST_BE_GREATER_THAN_ZERO" xml:space="preserve">
     <value>The amount must be greater than zero</value>
   </data>
-  <data name="EXPENSES_CANNOT_BE_FOR_THE_FUTURE" xml:space="preserve">
-    <value>The date must be less than or equal to current date</value>
+  <data name="EMAIL_EMPTY" xml:space="preserve">
+    <value>The e-mail cannot be empty.</value>
   </data>
-  <data name="PAYMENT_TYPE_INVALID" xml:space="preserve">
-    <value>The payment type must be valid</value>
+  <data name="EMAIL_INVALID" xml:space="preserve">
+    <value>The e-mail is invalid.</value>
+  </data>
+  <data name="EXPENSES_CANNOT_FOR_THE_FUTURE" xml:space="preserve">
+    <value>Expenses cannot be for the future</value>
   </data>
   <data name="EXPENSE_NOT_FOUND" xml:space="preserve">
-    <value>Expense cannot be found</value>
+    <value>Expense not found</value>
+  </data>
+  <data name="INVALID_PASSWORD" xml:space="preserve">
+    <value>Your password must be at least 8 characters long and include at least one uppercase letter, one lowercase letter, and one number.</value>
+  </data>
+  <data name="NAME_EMPTY" xml:space="preserve">
+    <value>The name cannot be empty.</value>
+  </data>
+  <data name="PAYMENT_TYPE_INVALID" xml:space="preserve">
+    <value>Payment Type is not valid.</value>
+  </data>
+  <data name="TITLE_REQUIRED" xml:space="preserve">
+    <value>The title is required.</value>
+  </data>
+  <data name="UNKNOWN_ERROR" xml:space="preserve">
+    <value>Unknown error</value>
+  </data>
+  <data name="EMAIL_ALREADY_REGISTERED" xml:space="preserve">
+    <value>The e-mail is already registered</value>
   </data>
 </root>
