feat: add login and token

--- a/src/CashFlow.Exception/ResourceErrorMessages.pt.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.pt.resx
@@ -150,4 +150,7 @@
   <data name="NAME_EMPTY" xml:space="preserve">
     <value>O nome não pode ser vazio</value>
   </data>
+  <data name="EMAIL_OR_PASSWORD_INVALID" xml:space="preserve">
+    <value>O e-mail e/ou senha está inválido</value>
+  </data>
 </root>
