add tests for expenses

--- a/src/CashFlow.Exception/ResourceErrorMessages.pt.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.pt.resx
@@ -118,39 +118,42 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AMOUNT_MUST_BE_GREATER_THAN_ZERO" xml:space="preserve">
-    <value>A quantidade deve ser maior que zero</value>
+    <value>A quantidade deve ser maior que zero.</value>
   </data>
   <data name="EMAIL_EMPTY" xml:space="preserve">
-    <value>O e-mail não pode ser vazio</value>
+    <value>O e-mail não pode ser vazio.</value>
   </data>
   <data name="EMAIL_INVALID" xml:space="preserve">
-    <value>O e-mail está inválido</value>
+    <value>O e-mail está inválido.</value>
   </data>
   <data name="EXPENSES_CANNOT_FOR_THE_FUTURE" xml:space="preserve">
-    <value>Despesas não podem ser para o futuro</value>
+    <value>Despesas não podem ser para o futuro.</value>
   </data>
   <data name="EXPENSE_NOT_FOUND" xml:space="preserve">
-    <value>Não foi possível encontrar a despesa</value>
+    <value>Não foi possível encontrar a despesa.</value>
   </data>
   <data name="INVALID_PASSWORD" xml:space="preserve">
-    <value>A senha deve conter pelo menos 8 caracteres e incluir pelo menos uma letra maiúscula, uma letra minúscula , um número e um caractere especial</value>
+    <value>A senha deve conter pelo menos 8 caracteres e incluir pelo menos uma letra maiúscula, uma letra minúscula , um número e um caractere especial.</value>
   </data>
   <data name="PAYMENT_TYPE_INVALID" xml:space="preserve">
-    <value>Método de pagamento inválido</value>
+    <value>Método de pagamento inválido.</value>
   </data>
   <data name="TITLE_REQUIRED" xml:space="preserve">
-    <value>O título é obrigatório</value>
+    <value>O título é obrigatório.</value>
   </data>
   <data name="UNKNOWN_ERROR" xml:space="preserve">
-    <value>Erro desconhecido</value>
+    <value>Erro desconhecido.</value>
   </data>
   <data name="EMAIL_ALREADY_REGISTERED" xml:space="preserve">
-    <value>O e-mail já está cadastrado</value>
+    <value>O e-mail já está cadastrado.</value>
   </data>
   <data name="NAME_EMPTY" xml:space="preserve">
-    <value>O nome não pode ser vazio</value>
+    <value>O nome não pode ser vazio.</value>
   </data>
   <data name="EMAIL_OR_PASSWORD_INVALID" xml:space="preserve">
-    <value>O e-mail e/ou senha está inválido</value>
+    <value>O e-mail e/ou senha está inválido.</value>
+  </data>
+  <data name="PASSWORD_INVALID" xml:space="preserve">
+    <value>A senha está incorreta.</value>
   </data>
 </root>
