--- a/src/CashFlow.Exception/ResourceErrorMessages.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AMOUNT_MUST_BE_GREATER_THAN_ZERO" xml:space="preserve">
-    <value>The amount must be greater than zero</value>
+    <value>The amount must be greater than zero.</value>
   </data>
   <data name="EMAIL_EMPTY" xml:space="preserve">
     <value>The e-mail cannot be empty.</value>
@@ -127,10 +127,10 @@
     <value>The e-mail is invalid.</value>
   </data>
   <data name="EXPENSES_CANNOT_FOR_THE_FUTURE" xml:space="preserve">
-    <value>Expenses cannot be for the future</value>
+    <value>Expenses cannot be for the future.</value>
   </data>
   <data name="EXPENSE_NOT_FOUND" xml:space="preserve">
-    <value>Expense not found</value>
+    <value>Expense not found.</value>
   </data>
   <data name="INVALID_PASSWORD" xml:space="preserve">
     <value>Your password must be at least 8 characters long and include at least one uppercase letter, one lowercase letter, one number and a special caractere.</value>
@@ -142,7 +142,7 @@
     <value>The title is required.</value>
   </data>
   <data name="UNKNOWN_ERROR" xml:space="preserve">
-    <value>Unknown error</value>
+    <value>Unknown error.</value>
   </data>
   <data name="EMAIL_ALREADY_REGISTERED" xml:space="preserve">
     <value>The e-mail is already registered</value>
@@ -151,6 +151,9 @@
     <value>The name cannot be empty.</value>
   </data>
   <data name="EMAIL_OR_PASSWORD_INVALID" xml:space="preserve">
-    <value>The e-mail and/or password is invalid</value>
+    <value>The e-mail and/or password is invalid.</value>
+  </data>
+  <data name="PASSWORD_INVALID" xml:space="preserve">
+    <value>The password is wrong.</value>
   </data>
 </root>
