feat: add expenses pdf reports

--- a/src/CashFlow.Domain/Reports/ResourceReportGenerationMessages.resx
+++ b/src/CashFlow.Domain/Reports/ResourceReportGenerationMessages.resx
@@ -132,4 +132,10 @@
   <data name="TITLE" xml:space="preserve">
     <value>Title</value>
   </data>
+  <data name="ESPENSES_FOR" xml:space="preserve">
+    <value>Expenses for</value>
+  </data>
+  <data name="TOTAL_SPENT_IN" xml:space="preserve">
+    <value>Total spent in {0}</value>
+  </data>
 </root>
