--- a/src/CashFlow.Domain/Reports/ResourceReportGenerationMessages.pt.resx
+++ b/src/CashFlow.Domain/Reports/ResourceReportGenerationMessages.pt.resx
@@ -132,4 +132,10 @@
   <data name="TITLE" xml:space="preserve">
     <value>Título</value>
   </data>
+  <data name="ESPENSES_FOR" xml:space="preserve">
+    <value>Desespesas para</value>
+  </data>
+  <data name="TOTAL_SPENT_IN" xml:space="preserve">
+    <value>Total gasto em {0}</value>
+  </data>
 </root>
