feat: add expenses tags

--- a/src/CashFlow.Exception/ResourceErrorMessages.pt.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.pt.resx
@@ -156,4 +156,7 @@
   <data name="PASSWORD_INVALID" xml:space="preserve">
     <value>A senha está incorreta.</value>
   </data>
+  <data name="TAG_TYPE_NOT_SUPPORTED" xml:space="preserve">
+    <value>Tag não suportada</value>
+  </data>
 </root>
