--- a/src/CashFlow.Exception/ResourceErrorMessages.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.resx
@@ -156,4 +156,7 @@
   <data name="PASSWORD_INVALID" xml:space="preserve">
     <value>The password is wrong.</value>
   </data>
+  <data name="TAG_TYPE_NOT_SUPPORTED" xml:space="preserve">
+    <value>Tag not supported.</value>
+  </data>
 </root>
